--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "config": "^3.3.12",
     "cors": "^2.8.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
@@ -25,6 +26,7 @@
     "@types/express": "4.17.21",
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
+    "globals": "^16.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
