--- a/backend/package.json
+++ b/backend/package.json
@@ -14,18 +14,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "express": "4.19.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.5",
     "@types/cors": "^2.8.18",
     "@types/express": "4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
