--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "bcrypt": "^6.0.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "express": "4.19.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
