--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroui/badge": "^2.2.12",
+    "@heroui/breadcrumbs": "^2.2.15",
     "@heroui/button": "2.2.19",
+    "@heroui/card": "^2.2.18",
     "@heroui/code": "2.2.14",
+    "@heroui/image": "^2.2.12",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
     "@heroui/link": "2.2.16",
@@ -19,6 +23,7 @@
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
+    "@heroui/table": "^2.2.18",
     "@heroui/theme": "2.4.15",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
