--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,17 +20,22 @@
     "@heroui/link": "2.2.16",
     "@heroui/listbox": "2.3.18",
     "@heroui/navbar": "2.2.17",
+    "@heroui/react": "^2.7.8",
+    "@heroui/select": "^2.4.19",
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/table": "^2.2.18",
     "@heroui/theme": "2.4.15",
+    "@iconify/react": "^6.0.0",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
-    "intl-messageformat": "10.7.16",
     "next": "15.3.1",
+    "next-intl": "^4.1.0",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
