--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.16",
     "@heroui/badge": "^2.2.12",
     "@heroui/breadcrumbs": "^2.2.15",
     "@heroui/button": "2.2.19",
