--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
